# libmrhev

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/Building/: Building.rst
doc/source/Enumerations/: Enumerations.rst
doc/source/Enumerations/_Internal/libmrhev_Directory/Error/MRH_EventQueueErrorInternal/: MRH_EV_Error_File.rst
doc/source/Enumerations/_Internal/libmrhev_Directory/MRH_EventQueue/: MRH_QueueType.rst  MRH_TransmissionData.rst  MRH_TransmissionMethod.rst  MRH_TransmissionState.rst
doc/source/Enumerations/libmrhev_Directory/Error/MRH_EventQueueError/: MRH_EV_Error_Type.rst
doc/source/Functions/: Functions.rst
doc/source/Functions/_Internal/libmrhev/: MRH_ListPopFront.rst  MRH_ListPushBack.rst  MRH_OpenEventQueueGeneric.rst  MRH_OpenEventQueueMRHCKM.rst  MRH_OpenEventQueuePipe.rst
doc/source/Functions/_Internal/libmrhev_Directory/Error/MRH_EventQueueErrorInternal/: MRH_SetEventQueueError.rst
doc/source/Functions/_Internal/libmrhev_Directory/MRH_QueueUpdateMRHCKM/: MRH_CloseQueueSourceMRHCKM.rst  MRH_OpenQueueSourceMRHCKM.rst  MRH_RecieveCurrentEventMRHCKM.rst  MRH_SendCurrentEventMRHCKM.rst
doc/source/Functions/_Internal/libmrhev_Directory/MRH_QueueUpdatePipe/: MRH_CloseQueueSourcePipe.rst  MRH_OpenQueueSourcePipe.rst  MRH_RecieveCurrentEventPipe.rst  MRH_SendCurrentEventPipe.rst  UpdateTransmissionData.rst
doc/source/Functions/_Internal/libmrhev_Directory/Source/MRH_SourceMRHCKM/: TODO.txt
doc/source/Functions/_Internal/libmrhev_Directory/Source/MRH_SourcePipe/: MRH_ClosePipe.rst  MRH_OpenPipe.rst  MRH_PollPipe.rst  MRH_ReadPipe.rst  MRH_WritePipe.rst
doc/source/Functions/libmrhev/: MRH_AddEvent.rst  MRH_CanSendEvents.rst  MRH_CloseEventQueue.rst  MRH_GetEvent.rst  MRH_GetEventQueueEventCount.rst  MRH_OpenInputQueueMRHCKM.rst  MRH_OpenInputQueuePipe.rst  MRH_OpenOutputQueueMRHCKM.rst  MRH_OpenOutputQueuePipe.rst  MRH_RecieveEvents.rst  MRH_SendEvents.rst
doc/source/Functions/libmrhev_Directory/Error/MRH_EventQueueError/: MRH_GetEventQueueError.rst  MRH_GetEventQueueErrorFile.rst  MRH_GetEventQueueErrorFileLine.rst  MRH_GetEventQueueErrorString.rst  MRH_ResetEventQueueError.rst
doc/source/Macros/: Macros.rst
doc/source/Macros/libmrhev_Directory/MRH_EvRevision/: MRH_EV_LIB_VERSION_MAJOR.rst  MRH_EV_LIB_VERSION_MINOR.rst  MRH_EV_LIB_VERSION_PATCH.rst
doc/source/Structs/: Structs.rst
doc/source/Structs/_Internal/libmrhev_Directory/MRH_EventQueue/: MRH_EventList.rst  MRH_EventQueue_t.rst
doc/source/Structs/_Internal/libmrhev_Directory/Source/MRH_SourcePipe/: MRH_SourcePipe.rst
doc/source/Structs/libmrhev/: MRH_EventQueue_t.rst  MRH_InputEventQueue.rst  MRH_OutputEventQueue.rst
include/libmrhev/: libmrhev.h
include/libmrhev/libmrhev/: MRH_EvRevision.h
include/libmrhev/libmrhev/Error/: MRH_EventQueueError.h
src/: libmrhev.c
src/libmrhev/: MRH_EventQueue.h  MRH_QueueUpdateMRHCKM.c  MRH_QueueUpdateMRHCKM.h  MRH_QueueUpdatePipe.c  MRH_QueueUpdatePipe.h
src/libmrhev/Error/: MRH_EventQueueError.c  MRH_EventQueueErrorInternal.h
src/libmrhev/Source/: MRH_SourceMRHCKM.c  MRH_SourceMRHCKM.h  MRH_SourcePipe.c  MRH_SourcePipe.h
